syntax = "proto3";

package authentication;

option go_package = "github.com/flavioesteves/wizer-app/broker/proto";


message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
 bool isValid = 1;
 string token = 2;
}

message ValidateTokenRequest {
  string token= 1;
}

message ValidateTokenResponse {
  bool isValid =1;
  string message = 2;
}

service AuthenticationService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}
