syntax = "proto3";

package user;

option  go_package = "github.com/flavioesteves/wizer-app/user/proto";

import "google/protobuf/empty.proto";

message User {
  string id = 1;
  string email =2;
  string password=3;
}

message UserId {
  string id =1;
}


service UserService {
  rpc CreateUser (User) returns (User);
  rpc GetUser (UserId) returns(User);
  rpc UpdateUser (User) returns (google.protobuf.Empty);
  rpc DeleteUser (UserId) returns (google.protobuf.Empty);
  rpc ListUsers (google.protobuf.Empty) returns (stream User);
}
